# typingmp

./: .gitignore  Cargo.toml  LICENSE  build.rs  index.html  logger_server.js  package-lock.json  readme.md  run_uefi.ps1  run_uefi_hyperv.ps1  rust_multibackend_app.js  script.py  src.txt
.github/workflows/: release.yml
assets/: japanese.json
examples/: MIT.ntq  いろは歌.ntq  五十音.ntq  平仮名.ntq  百人一首.ntq
fonts/: NotoSerifJP-OTF.txt
src/: LLM.md  app.rs  gui.rs  layout_data.rs  lib.rs  main.rs  model.rs  parser.rs  renderer.rs  timestamp.rs  tui.rs  typing.rs  typing_renderer.rs  uefi.rs  ui.rs  wasm.rs  wasm_debug_logger.rs
uefi_image/EFI/BOOT/: BOOTX64.EFI
