[package]
name = "rust_multibackend_app"
version = "0.1.0"
edition = "2021"

# wasm-bindgenがライブラリとしてクレートをコンパイルするために必要
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# デフォルトでgui featureを有効にする
default = ["gui"]
gui = ["minifb"]
tui = ["crossterm"]
wasm = [
    "wasm-bindgen",
    "web-sys",
    "console_error_panic_hook",
    "getrandom/js"
]

[dependencies]
ab_glyph = "0.2.21"

# バックエンドごとのオプショナルな依存関係
minifb = { version = "0.28.0", optional = true }
crossterm = { version = "0.29.0", optional = true }

# WASM用のオプショナルな依存関係
wasm-bindgen = { version = "0.2.87", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2", optional = true }

[dependencies.web-sys]
version = "0.3.64"
optional = true
features = [
    'Document',
    'Window',
    'Element',
    'HtmlCanvasElement',
    'CanvasRenderingContext2d',
    'ImageData',
    'KeyboardEvent',
    'Blob',
    'Url',
]