[package]
name = "rust_multibackend_app"
version = "0.1.0"
edition = "2021"

# wasm-bindgenがライブラリとしてクレートをコンパイルするために必要
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# デフォルトでgui featureを有効にする
default = []
gui = ["dep:minifb"]
tui = ["dep:crossterm"]
wasm = [
    "dep:wasm-bindgen",
    "dep:web-sys",
    "dep:console_error_panic_hook",
    "getrandom/js"
]
uefi = ["dep:uefi", "dep:log", "dep:core_maths"]

[dependencies]
ab_glyph = { version = "0.2.31", default-features = false, features = ["libm"] }

# バックエンドごとのオプショナルな依存関係
minifb = { version = "0.28.0", optional = true }
crossterm = { version = "0.29.0", optional = true }
core_maths = { version = "0.1.1", optional = true }

# WASM用のオプショナルな依存関係
wasm-bindgen = { version = "0.2.87", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2", optional = true }

# UEFI用のオプショナルな依存関係
uefi = { version = "0.35.0", optional = true, features = ["alloc","panic_handler", "logger" ] }
log = { version = "0.4", optional = true }

[dependencies.web-sys]
version = "0.3.64"
optional = true
features = [
    'Document',
    'Window',
    'Element',
    'HtmlCanvasElement',
    'CanvasRenderingContext2d',
    'ImageData',
    'KeyboardEvent',
    'Blob',
    'Url',
]


# UEFIターゲット用のリリースプロファイル設定
# パニックした際にスタックを巻き戻すのではなく、即座に停止させる
[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[[bin]]
name = "rust_multibackend_app"
path = "src/main.rs"
required-features = []