[package]
name = "rust_multibackend_app"
version = "0.1.1"
edition = "2021"

# wasm-bindgenがライブラリとしてクレートをコンパイルするために必要
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# デフォルトでgui featureを有効にする
default = []
# gui featureが有効な場合に、minifb、raw-window-handle、winapiを有効にする
gui = [
    "dep:minifb",
    "dep:raw-window-handle", # minifbがRawWindowHandleトレイトを実装するために必要
    "dep:winapi",           # Windows APIを直接呼び出すために必要
]
tui = ["dep:crossterm"]
wasm = [
    "dep:wasm-bindgen",
    "dep:web-sys",
    "dep:console_error_panic_hook",
    "getrandom/js"
]
uefi = ["dep:uefi", "dep:log", "dep:core_maths"]

[dependencies]
ab_glyph = { version = "0.2.31", default-features = false, features = ["libm"] }
phf = { version = "0.11", features = ["macros"] }

# バックエンドごとのオプショナルな依存関係
minifb = { version = "0.28.0", optional = true }
crossterm = { version = "0.29.0", optional = true }
core_maths = { version = "0.1.1", optional = true }

# Windows GUIカスタマイズのためのオプショナルな依存関係
# gui featureが有効な場合にのみビルドされる
raw-window-handle = { version = "0.6", optional = true } # ここを 0.6 に修正
winapi = { version = "0.3", features = ["dwmapi", "windef", "minwindef"], optional = true }


# WASM用のオプショナルな依存関係
wasm-bindgen = { version = "0.2.87", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2", optional = true }

# UEFI用のオプショナルな依存関係
uefi = { version = "0.35.0", optional = true, features = ["alloc","panic_handler", "logger" ] }
log = { version = "0.4", optional = true }

[dependencies.web-sys]
version = "0.3.64"
optional = true
features = [
    'Document',
    'Window',
    'Element',
    'HtmlCanvasElement',
    'CanvasRenderingContext2d',
    'ImageData',
    'Blob',
    'Url',
    'KeyboardEvent',
]


# UEFIターゲット用のリリースプロファイル設定
# パニックした際にスタックを巻き戻すのではなく、即座に停止させる
[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"


# WASMターゲットのビルド時にのみ必要となる依存関係
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }